# rm2025

rm_2025-Hero/: CMakeLists.txt  main.cpp  main.h
rm_2025-Hero/include/: debug.h
rm_2025-Hero/include/Preprocess/: Preprocess.h
rm_2025-Hero/include/Resolver/: GimbalControl.h  Resolver.h
rm_2025-Hero/include/SerialPort/: SerialPort.h  UDPSender.h
rm_2025-Hero/include/Tracker/: Predictor.h  Tracker.h  bumper.h
rm_2025-Hero/include/armor_detector/: ArmorDetetion.h  LightBar.h  ROI_Accelerator.h  TargetChooser.h  armor.h  classifier.h  inference.h  score.h
rm_2025-Hero/include/kalmanfilter/: KalmanFilter.h
rm_2025-Hero/include/mindvision/: VideoCapture.h  VideoSaver.h
rm_2025-Hero/include/outpost/: Array.h  newArray.h  outpost.h  params.h
rm_2025-Hero/params/: CameraParams_MindVision.yml
rm_2025-Hero/src/Resolver/: GimbalControl.cpp  Resolver.cpp
rm_2025-Hero/src/SerialPort/: SerialPort.cpp
rm_2025-Hero/src/Tracker/: Predictor.cpp
rm_2025-Hero/src/armor_detector/: ArmorDetetion.cpp  LightBar.cpp  ROI_Accelerator.cpp  TargetChooser.cpp  armor.cpp  inference.cpp  score.cpp
rm_2025-Hero/src/kalmanfilter/: KalmanFilter.cpp
rm_2025-Hero/src/mindvision/: Video.cpp  VideoCapture.cpp  VideoSaver.cpp  camera_mindvision_running.cpp
rm_2025-Hero/src/outpost/: outpost.cpp  params.cpp
